tests/machine/x/cobol/partial_application.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/partial_application.cob:11: error: syntax error, unexpected USING
/workspace/mochi/tests/machine/x/cobol/partial_application.cob:12: error: 'FN_ADD_RES' is not defined
/workspace/mochi/tests/machine/x/cobol/partial_application.cob:13: error: syntax error, unexpected USING
/workspace/mochi/tests/machine/x/cobol/partial_application.cob:14: error: 'FN_ADD5_RES' is not defined
/workspace/mochi/tests/machine/x/cobol/partial_application.cob: in paragraph 'FN_ADD':
/workspace/mochi/tests/machine/x/cobol/partial_application.cob:18: error: syntax error, unexpected PROCEDURE
/workspace/mochi/tests/machine/x/cobol/partial_application.cob:19: error: 'A' is not defined
/workspace/mochi/tests/machine/x/cobol/partial_application.cob:19: error: 'B' is not defined
/workspace/mochi/tests/machine/x/cobol/partial_application.cob:13: error: 'FN_ADD5' is not defined

