tests/machine/x/cobol/partial_application.cob
*> Generated by Mochi compiler v0.10.27 on 2025-07-17T11:45:42Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. PARTIAL-APPLICATION.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 FN-ADD-RES PIC 9 VALUE 0.
       01 ADD5 PIC 9.
       01 TMP PIC S9(9) VALUE 0.
       01 TMP-STR PIC Z(18).
       PROCEDURE DIVISION.
       PERFORM FN_ADD USING 5
       COMPUTE ADD5 = FN-ADD-RES
       PERFORM FN_ADD5 USING 3
       DISPLAY FN-ADD5-RES
       STOP RUN.
       
       FN_ADD.
           PROCEDURE DIVISION USING A B.
               COMPUTE FN-ADD-RES = A + B
               EXIT.
